FLY-3597,3623,3624,Select All in SD(implemented basic fun to show the option)

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -402,7 +402,7 @@
     },
     "structuredData": {
         "structuredData": "Structured Data",
-        "structuredDataImport": "Import Structured Data",
+        "structuredDataImport": "Add Structured Data",
         "upload_json": "Upload JSON / CSV File",
         "drag_drop": "Drag and drop file anywhere on this screen",
         "browse": "Browse",
