'FLY-3576,FLY-4236,FLY-4286,FLY-3463,FLY-3704,FLY-3959,FLY-4196'

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -938,7 +938,7 @@
         "preview": "Preview",
         "template_outlook": "The end-users will see the response as per the template you select in the Search Experience",
         "add_conditions": "Add Conditions",
-        "conditions": "Conditions",
+        "conditions": "Condition",
         "and": "And",
         "select_contect": "Select Context",
         "select_parameters": "Set Parameters",
